Kubernetes Project/postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:
spec:
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-persistent-volume-claim
      contains:
        - name:postgres
          image: postgres
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containers: 5432
          volumeMounts:
            - mountPath: /var/lib/postgres/data
              name: postgres
